<resources>
    <string name="app_name">Cheezy Bite</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="total_pizzas">Total pizzas: ?</string>
    <string name="calculate">Calculate</string>
    <string name="totalPizzasNum">Total pizzas: %d</string>
    <string name="least_1_integer">Number must be less than 8 digit</string>
    <string name="order_Pizza">Order Pizza</string>
    <string-array name="sizes_array" >
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>