<?xml version="1.0" encoding="utf-8"?>


<!--Constraint Layout -->
<!--Margin Dimensions used dimens.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/marginStart"
    android:layout_marginTop="@dimen/marginTop"
    android:layout_marginEnd="@dimen/marginEnd"
    android:layout_marginBottom="@dimen/marginBottom"
    android:background="@drawable/background_image"
    tools:context=".MainActivity"
    android:configChanges="orientation|screenSize">

    <!-- android:theme="@style/Theme.MaterialComponents.Light" -->

    <!-- To display text  -->

    <TextView
        android:id="@+id/orderPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/numOfPeople"
        android:paddingTop="16dp"
        android:text="@string/order_Pizza"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/textSize_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:labelFor="@id/numOfPeople"
        android:paddingTop="16dp"
        android:text="@string/number_of_people"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/textSize_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- To Display Text -->

    <EditText
        android:id="@+id/numOfPeople"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/textSize_2"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/length_error_message"
        android:layout_width="203dp"
        android:layout_height="24dp"
        android:text="@string/least_1_integer"
        android:textSize="@dimen/textSize_0"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/textView"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/howHungryButton"
        android:layout_width="189dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/howHungryButton"
        android:text="@string/how_hungry"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/textSize_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfPeople" />

    <!--  Spinner Widget   -->

    <Spinner
        android:id="@+id/spinner_size"
        style="@style/spinner_size"
        android:layout_width="171dp"
        android:layout_height="50dp"
        android:entries="@array/sizes_array"
        app:layout_constraintBaseline_toBaselineOf="@id/howHungryButton"
        app:layout_constraintLeft_toRightOf="@id/howHungryButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <!-- To display text     -->
     <TextView
        android:id="@+id/numOfPizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:freezesText="true"
        android:text="@string/total_pizzas"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/textSize_3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/howHungryButton" />

    <!-- Button to execute the calculate function -->

    <Button
        android:id="@+id/calcButton"
        style="@style/CalcButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:onClick="calculateClick"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/numOfPizzas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>